<resources>
    <string name="app_name">AMS</string>
    <string name="password">Password</string>
    <string name="uid">email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="alraedy_have_an_account">Alraedy have an account?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="os_dbms"><![CDATA[OS & DBMS]]></string>
    <string name="python_gender_eq"><![CDATA[PYTHON & GENDER EQ]]></string>
</resources>